--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "css-loader": "^6.7.1",
     "react": "^18.2.0",
